--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <h2>Contact Us</h2>
         <div class="contact">
             <p>Questions about this privacy policy?</p>
-            <p>Email us at: <a href="mailto:privacy@yourapp.com">privacy@yourapp.com</a></p>
+            <p>Email us at: <a href="mailto:intermittentfastingflow@gmail.com">intermittentfastingflow@gmail.com</a></p>
             <p style="margin-top: 10px; color: #666; font-size: 14px;">
                 We typically respond within 24-48 hours.
             </p>
